# Chess

./: .gitignore  README.md  pyproject.toml  script_launcher.sh  setup.cfg
.github/: test-job.yml
.github/workflows/: codeql.yml  test-job.yml
app/: __init__.py
app/src/: __init__.py  constants.py  logger.py
app/src/back/: constantes.py
app/src/back/chess_board/: board.py  square.py
app/src/back/miscenaleous/: __init__.py  color.py  move.py  piece_type.py
app/src/back/pieces/: bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
app/src/exceptions/: __init__.py  invalid_move_error.py  invalid_movement_error.py  missing_king_error.py  row_error.py  unavailable_square_error.py
app/src/model/: constantes.py
app/src/model/available_move_getter/: _available_squares_getter.py  available_moves.py  (+2 more)
app/tests/: test_version.py
app/tests/tf/: test_draw.py  test_game.py
app/tests/tu/: test_board.py  test_piece_diagonal_movement.py  test_piece_line_movement.py  test_utils.py
dev-scripts/: black.sh  pylint.sh  test_cov.sh
scripts/: black.sh  pylint.sh  test_cov.sh
src/: constants.py  logger.py
src/CHESS/: constants.py  logger.py
src/CHESS/app/: main.py
src/CHESS/exceptions/: invalid_move_error.py
src/domain/classes/: square.py
src/domain/game/: game.py
src/domain/states/: board.py  castling_state.py  game_historic.py  game_state.py
src/exceptions/: invalid_move_error.py  missing_king_error.py
src/ihm/: main.py
src/tests/tf/: test_game.py
src/ui/: Board.qml  board_square.qml  main.qml  main.ui
utils/: ui_2_py.py
(+240 files in other folders)
