[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Chess UI, and chess IA"
authors = ["Guillaume de Bigault de Granrut <guillaume.degranrut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
pylint = "^2.14.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
