[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Chess UI, and chess IA"
authors = ["Guillaume de Bigault de Granrut <guillaume.degranrut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
JSON-log-formatter = "^0.5.1"
coloredlogs = "^15.0.1"
logger = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
